// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`List > renders an empty list 1`] = `
<DocumentFragment>
  <div
    class="flex h-full flex-1 flex-col overflow-y-auto px-2 py-2 my-2"
    data-testid="plugin-list"
    role="listbox"
  />
</DocumentFragment>
`;

exports[`List > renders items 1`] = `
<DocumentFragment>
  <div
    class="flex h-full flex-1 flex-col overflow-y-auto px-2 py-2 my-2"
    data-testid="plugin-list"
    role="listbox"
  >
    <div
      class="flex flex-row cursor-pointer items-center rounded-md px-2 py-2 text-sm bg-white/10"
      data-selected="true"
      data-testid="plugin-list-item"
    >
      <div
        class="flex flex-row justify-between flex-1"
      >
        <div
          class="mr-3 flex h-8 w-8 flex-shrink-0 items-center justify-center"
        />
        <div
          class="flex min-w-0 flex-1 flex-row items-center justify-start"
        >
          <div
            class="truncate text-white text-base"
          >
            Test
          </div>
        </div>
        <div
          class="flex flex-row items-center text-base text-white/50"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`List > renders sections 1`] = `
<DocumentFragment>
  <div
    class="flex h-full flex-1 flex-col overflow-y-auto px-2 py-2 my-2"
    data-testid="plugin-list"
    role="listbox"
  >
    <div>
      <div
        class="px-2 py-2 text-sm font-medium tracking-wide text-gray-400"
        data-testid="plugin-list-section"
      >
        <div
          class="flex items-center"
        >
          Section 1
        </div>
      </div>
      <div
        class="flex flex-row cursor-pointer items-center rounded-md px-2 py-2 text-sm bg-white/10"
        data-selected="true"
        data-testid="plugin-list-item"
      >
        <div
          class="flex flex-row justify-between flex-1"
        >
          <div
            class="mr-3 flex h-8 w-8 flex-shrink-0 items-center justify-center"
          />
          <div
            class="flex min-w-0 flex-1 flex-row items-center justify-start"
          >
            <div
              class="truncate text-white text-base"
            >
              Test
            </div>
          </div>
          <div
            class="flex flex-row items-center text-base text-white/50"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
